style and add copy for the thank you intro

--- a/app/assets/stylesheets/application/_thank_you.css.sass
+++ b/app/assets/stylesheets/application/_thank_you.css.sass
@@ -21,3 +21,11 @@
     &:hover
       color: $grayLight
 
+.thank-you
+  margin-bottom: 20px
+  .intro
+    h1, h2, h3, h4, h5
+      color: $brick
+    p
+      +font-sans-medium
+
