--- a/app/views/thank_you/show.html.haml
+++ b/app/views/thank_you/show.html.haml
@@ -6,8 +6,8 @@
       .span12
         %h3= "Thank You #{current_user.name}!"
 
-.container
-  .row
+.container.thank-you
+  .row.intro
     .span12
       :markdown
         #{thank_you_intro.to_s}
