DRY and update thank you

--- a/app/views/thank_you/_image_navigation.html.haml
+++ b/app/views/thank_you/_image_navigation.html.haml
@@ -1,5 +1,5 @@
 .image-with-caption
-  %img{src: s3_image_url(image)}
+  %img{src: s3_image_url(image.to_s)}
   .image-caption
     :markdown
       #{caption}
