--- a/app/views/thank_you/show.html.haml
+++ b/app/views/thank_you/show.html.haml
@@ -10,12 +10,12 @@
   .row.intro
     .span12
       :markdown
-        #{thank_you_intro.to_s}
+        #{thank_you_intro}
   .row
     .span4
-      = render 'image_navigation', image: thank_you_image_left.to_s, caption: thank_you_image_left_caption.to_s
+      = render 'image_navigation', image: thank_you_image_left, caption: thank_you_image_left_caption
     .span4
-      = render 'image_navigation', image: thank_you_image_middle.to_s, caption: thank_you_image_middle_caption.to_s
+      = render 'image_navigation', image: thank_you_image_middle, caption: thank_you_image_middle_caption
     .span4
-      = render 'image_navigation', image: thank_you_image_right.to_s, caption: thank_you_image_right_caption.to_s
+      = render 'image_navigation', image: thank_you_image_right, caption: thank_you_image_right_caption
 
