--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,6 +19,7 @@
 @import application/courses/course_breakdown
 @import application/activities/overview
 @import application/activities/step_by_step
+@import application/user_profiles/show
 
 @import application/users/forms
 
