--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -5,7 +5,7 @@
       %i.icon-chevron-right.pull-right
 
   %li.authentication
-    = link_to '#' do
+    = link_to user_profile_path(current_user) do
       = current_user.name
       %i.icon-chevron-right.pull-right
     %span
