add public/private link to index/show views

--- a/app/views/admin/activities/_show.html.haml
+++ b/app/views/admin/activities/_show.html.haml
@@ -8,6 +8,9 @@
             %th Published
             %td= activity.published
           %tr
+            %th Link
+            %td= activity_link(activity)
+          %tr
             %th Title
             %td= activity.title
           %tr
