use partials and start styling the bio

--- a/app/assets/stylesheets/application/user_profiles/show.css.sass
+++ b/app/assets/stylesheets/application/user_profiles/show.css.sass
@@ -1,3 +1,30 @@
 .user-profile
+  margin-top: 40px
+  margin-bottom: 40px
+  .horizontal-divider
+    margin-top: 40px
+
+.user-profile-bio
+
+.user-bio-info
+  margin-left: 20px
+  h3
+    margin: 0
+    line-height: 1em
+  img
+    width: 130px
+  ul
+    margin-top: 10px
+    li
+      padding-bottom: 15px
+      &:last-child
+        padding-bottom: 0
   i:before
     color: $gray
+
+.user-profile-intro
+  overflow: hidden
+  p
+    +font-serif-large
+    margin-top: 10px
+
