--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -40,6 +40,11 @@ p
   border-top: 1px solid $grayLight
   border-bottom: 1px solid $grayLight
 
+.simple-well
+  @extend .well
+  border: none
+  border-radius: 0px
+
 .hero-comments
   margin-bottom: 0
   padding-bottom: 2em
