tweak p styling in step directions

--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -40,4 +40,9 @@
   line-height: 1.6em
   li
     margin-top: 0.8em
+  p
+    font-size: 18px
+    line-height: 20px
+    margin-top: 0
+    margin-bottom: 0.8em
 
