setup slugs for activity model

--- a/app/views/admin/tasks/_task_list.html.haml
+++ b/app/views/admin/tasks/_task_list.html.haml
@@ -14,3 +14,6 @@
 
 %p
   = task_button 'Publish all activities', admin_tasks_publish_all_activities_path
+
+%p
+  = task_button 'Create activity slugs', admin_tasks_create_activity_slugs_path
