poor man's friendly id for course

--- a/app/views/activities/_breadcrumbs.html.haml
+++ b/app/views/activities/_breadcrumbs.html.haml
@@ -2,6 +2,6 @@
   .span12
     %ul.breadcrumb
       %li
-        = link_to "Accelerated Sous Vide Cooking Course", course_path(1)
+        = link_to "Accelerated Sous Vide Cooking Course", course_path('accelerated-sous-vide-cooking-course')
         %i.icon-chevron-right
       %li.active!= activity.title
