--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -21,7 +21,7 @@
         %h2 Master sous vide cooking
         %h3 in our first free-to-learn cooking course
       .span.pull-right
-        %a.button{ href: course_path(1) }
+        %a.button{ href: course_path('accelerated-sous-vide-cooking-course') }
           .inner
             Preview Course
             %i.icon-double-chevron-right
