rework style for ingredients list

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -33,10 +33,13 @@
     width: 100%
     +font-sans-medium
     thead
-      color: $white
-      background: $gray
+      color: $gray
+      border-top: 1px solid $gray
+      border-bottom: 1px solid $gray
       th
-        padding: 15px
+        padding: 7px 0
+        font-weight: 400
+        text-transform: uppercase
       th:first-child
         text-align: left
     tbody
@@ -45,7 +48,7 @@
       tr
         color: $black
         td
-          padding: 10px
+          padding: 7px 10px 0 0
         td:first-child
           width: 100%
 
