--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,6 +4,7 @@
                       as: :user,
                       url: registration_path('user'),
                       remote: true) do |f|
+    = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
     = f.inputs 'Create a new account:' do
       = f.input :name, label: 'Name:'
       = f.input :email, as: :email, label: 'Email:', required: true, input_html: { required: true }
