--- a/app/views/user_profiles/_user_profile_step.html.haml
+++ b/app/views/user_profiles/_user_profile_step.html.haml
@@ -1,6 +1,7 @@
 .span4
   .user-profile-step
-    = image_tag step_image
+    .thumbnail
+      = image_tag step_image
     %span.step= "Step #{count}:"
     %span= title
     %p
