style facebook button

--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -93,6 +93,9 @@ $btnDangerBackgroundHighlight:      #bd362f;
 $btnInverseBackground:              #444;
 $btnInverseBackgroundHighlight:     $grayDarker;
 
+$btnFacebookBackground:             #293e69;
+$btnFacebookBackgroundHighlight:    lighten($btnFacebookBackground, 20%);
+
 
 // Forms
 // -------------------------
