--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,27 +1,51 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-  = devise_error_messages!
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email
-  %div
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, :autocomplete => "off"
-  %div
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %div
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password
-  %div= f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete}.
-= link_to "Back", :back
+- content_for :title, "Account Settings"
+
+.hero-unit
+  .container
+    .row
+      .span12
+        %h3 Account Settings
+
+.container.user-edit-form
+  .row
+    .span6
+      %h3 Edit #{resource_name.to_s.humanize}
+  .row
+    .span6.horizontal-divider
+  .row
+    .span6
+      = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+        = devise_error_messages!
+        .span6
+          = f.label :email, "Email address:"
+          = f.email_field :email
+        .span6
+          = f.label :password, "New password:"
+          %p (Leave blank if you don't want to change it)
+          = f.password_field :password, autocomplete: "off"
+        .span6
+          = f.label :password_confirmation
+          = f.password_field :password_confirmation
+        .span6
+          .well
+            = f.label :current_password
+            %p (we need your current password to confirm your changes)
+            = f.password_field :current_password
+        .span6
+          = link_to "Go Back", user_profile_path(resource)
+          %span
+            |
+          = f.submit "Update"
+  .row
+    .span6
+      %h3 Cancel My Account
+  .row
+    .span6.horizontal-divider
+  .row
+    .span6
+      %p Sorry to see you go.
+      = link_to "Go Back", user_profile_path(resource)
+      %span
+        |
+      = link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
+
