--- a/app/assets/stylesheets/application/user_profiles/show.css.sass
+++ b/app/assets/stylesheets/application/user_profiles/show.css.sass
@@ -1,10 +1,19 @@
 .user-profile
   margin-top: 40px
   margin-bottom: 40px
-  .horizontal-divider
-    margin-top: 40px
 
 .user-profile-bio
+  margin-top: 15px
+  margin-bottom: 40px
+  position: relative
+  .edit-account
+    +font-sans-small
+    position: absolute
+    top: -40px
+    right: 2px
+    text-decoration: none
+    text-transform: uppercase
+    color: $gray
   h3
     margin: 0
     line-height: 1em
