dont wrap bio text

--- a/app/assets/stylesheets/application/user_profiles/show.css.sass
+++ b/app/assets/stylesheets/application/user_profiles/show.css.sass
@@ -23,6 +23,7 @@
     margin-top: 10px
     li
       padding-bottom: 15px
+      white-space: nowrap
       &:last-child
         padding-bottom: 0
   i:before
