working registration confirmation flow
need to:
* refactor auth code to only store single object in session
* style form

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -27,5 +27,6 @@
       %i.icon-remove
     = render template: 'devise/sessions/new'
     = render template: 'devise/registrations/new'
+    = render template: 'devise/registrations/complete_registration'
     = render template: 'devise/passwords/new'
 
