style complete registration form

--- a/app/assets/stylesheets/application/users/_forms.css.sass
+++ b/app/assets/stylesheets/application/users/_forms.css.sass
@@ -108,6 +108,20 @@
       width: 38px
       color: $gray
 
+  .welcome
+    padding: 10px 0 20px 0
+
+    p
+      +font-sans-large
+      color: $grayDarker
+      padding: 26px 0 0 0
+      margin: 0 70px 0 160px
+      line-height: 1.2em
+
+    img
+      float: left
+      margin: 15px 0 0 90px
+
 
 #auth-modal
   +border-radius(16px)
