--- a/app/views/devise/registrations/create.js.erb
+++ b/app/views/devise/registrations/create.js.erb
@@ -2,9 +2,9 @@
 <% if @user.valid? %>
   window.location = "<%= thank_you_path %>"
 <% else %>
-  $('#sign-up form .error p').remove();
+  $('.user-form .error p').remove();
   $.each(JSON.parse('<%= errors %>'), function(field, errors) {
-    $('#sign-up form #user_' + field + '_input').append('<p>' + errors[0] + '</p>').addClass('error');
+    $('.user-form #user_' + field + '_input').append('<p>' + errors[0] + '</p>').addClass('error');
   });
 <% end %>
 
