--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -16,26 +16,27 @@
     .span6
       = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
         = devise_error_messages!
-        .span6
-          = f.label :email, "Email address:"
-          = f.email_field :email
-        .span6
-          = f.label :password, "New password:"
-          %p (Leave blank if you don't want to change it)
-          = f.password_field :password, autocomplete: "off"
-        .span6
-          = f.label :password_confirmation
-          = f.password_field :password_confirmation
-        .span6
-          .well
-            = f.label :current_password
-            %p (we need your current password to confirm your changes)
-            = f.password_field :current_password
-        .span6
-          = link_to "Go Back", user_profile_path(resource)
-          %span
-            |
-          = f.submit "Update"
+        %ul.unstyled
+          %li
+            = f.label :email, "Email address:"
+            = f.email_field :email
+          %li
+            = f.label :password, "New password:"
+            %p (Leave blank if you don't want to change it)
+            = f.password_field :password, autocomplete: "off"
+          %li
+            = f.label :password_confirmation, "Confirm password:"
+            = f.password_field :password_confirmation
+          %li
+            .well
+              = f.label :current_password, "Current password:"
+              %p (We need your current password to confirm your changes)
+              = f.password_field :current_password
+          %li
+            = link_to "Go Back", user_profile_path(resource), class: 'edit-link'
+            %span
+              |
+            = f.submit "Update", class: %w{btn btn-primary}
   .row
     .span6
       %h3 Cancel My Account
