responsive auth modal tweaks

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -89,12 +89,8 @@
 
   #auth-modal
     top: 10%
-    .user-form
-      max-width: inherit
     h1
       font-size: 26px
-    input
-      width: 217px
 
 
 @media (max-width: 480px)
@@ -159,8 +155,21 @@
     margin-bottom: 20px !important
 
   #auth-modal
-    input
+    input:not([type="checkbox"])
       width: 157px
+
+    .terms-of-service
+      padding-left: 85px
+
+    .forgot-password
+      margin-right: 53px
+
+    .welcome p
+      font-size: 16px
+      margin-right: 25px
+
+    .facebook-login a
+      margin-left: 0
 
 /* Everything but portrait iphone*/
 @media (min-width: 480px)
