--- a/app/assets/stylesheets/application/users/_forms.css.sass
+++ b/app/assets/stylesheets/application/users/_forms.css.sass
@@ -35,7 +35,7 @@
     white-space: normal
     text-shadow: none
     line-height: 20px
-    margin: 3px 14px 0 45px
+    margin: 4px 14px 0 45px
     padding: 0
 
   abbr[title=required]
@@ -97,6 +97,9 @@
     padding: 25px 0
     border-bottom: 2px dotted $grayMedium
     position: relative
+    a
+      width: 207px
+      margin-left: 30px
     i
       +font-serif-small
       position: absolute
