finish styling the edit account settings

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -177,6 +177,17 @@ iframe
     &:before, &:after
       color: $gray
 
+.edit-link.brick
+  color: $brick
+  &:hover
+    color: $brickDark
+    i
+      &:before, &:after
+        color: $brickDark
+  i
+    &:before, &:after
+      color: $brick
+
 .video-container
   position: relative
   padding-top: 30px
