--- a/app/views/devise/registrations/complete_registration.html.haml
+++ b/app/views/devise/registrations/complete_registration.html.haml
@@ -13,7 +13,8 @@
                       url: registration_path('user'),
                       remote: true) do |f|
     .welcome
-      %img{src: facebook_image_url(uid)}
+      - if uid
+        %img{src: facebook_image_url(uid)}
       %p Welcome, #{name}
       %p.last
         Please review your information below and agree
