use uppercase-link class

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -161,7 +161,7 @@ iframe
   &:hover
     background: $brickDark
 
-.edit-link
+.uppercase-link
   +font-sans-small
   text-decoration: none
   text-transform: uppercase
@@ -177,7 +177,7 @@ iframe
     &:before, &:after
       color: $gray
 
-.edit-link.brick
+.uppercase-link.brick
   color: $brick
   &:hover
     color: $brickDark
