--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -33,10 +33,10 @@
               %p (We need your current password to confirm your changes)
               = f.password_field :current_password
           %li
-            = link_to "Go Back", user_profile_path(resource), class: 'edit-link'
+            = link_to "Go Back", user_profile_path(resource), class: 'uppercase-link'
             %span
               |
-            = f.submit "Update", class: %w{btn btn-primary}
+            = f.submit "Update", class: "btn btn-primary"
   .row
     .span6
       %h3 Cancel My Account
@@ -46,8 +46,8 @@
     .span6
       .cancel-actions
         %p Sorry to see you go.
-        = link_to "Go Back", user_profile_path(resource), class: 'edit-link'
+        = link_to "Go Back", user_profile_path(resource), class: 'uppercase-link'
         %span
           |
-        = link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: %w{edit-link brick}
+        = link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "uppercase-link brick"
 
