--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,7 +2,7 @@
   %h1 Connect to sign up (or #{link_to 'log in', '#log-in'})
   = semantic_form_for(@user,
                       as: :user,
-                      url: registration_path('user'),
+                      url: registration_path('user', format: :json),
                       remote: true) do |f|
     = render 'devise/shared/facebook_login', text: 'Sign up with <b>Facebook</b>'
     = f.inputs 'Create a new account:' do
