--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -137,5 +137,6 @@
 
     -# Custom JS
     = javascript_include_tag "application"
+    = render 'layouts/app_init'
     = render 'layouts/google_analytics' if Rails.env.production?
 
