--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -11,7 +11,7 @@
       = f.input :password, label: 'Password:'
       = f.input :password_confirmation, label: 'Confirm Password:'
     .terms-of-service
-      = check_box_tag 'terms', true, false, required: true
-      = label_tag 'terms', "I accept the #{link_to "Terms of Service", terms_of_service_path, target: '_blank'}".html_safe
+      = check_box_tag 'terms-registration', true, false, required: true, class: 'terms'
+      = label_tag 'terms-registration', "I accept the #{link_to "Terms of Service", terms_of_service_path, target: '_blank'}".html_safe
     = f.submit "Sign Up", disable_with: 'Submitting&hellip;'.html_safe, disabled: true
 
