--- a/spec/javascripts/fixtures/auth_form.html.haml
+++ b/spec/javascripts/fixtures/auth_form.html.haml
@@ -2,6 +2,6 @@
   #user_password_input.input
     %label
     %input
-  %input#terms{type: "checkbox"}
+  %input.terms{type: "checkbox"}
   %input{type: "submit", disabled: "disabled"}
 
