bootstrap profile information on client

--- a/app/views/layouts/_app_init.html.haml
+++ b/app/views/layouts/_app_init.html.haml
@@ -1,5 +1,7 @@
 :javascript
   $(function() {
-    new ChefSteps.init()
+    new ChefSteps.init({
+      profile: '#{j(user_signed_in? ? current_user.to_json : nil)}'
+    })
   });
 
