fix activity steps nil refrence bug

--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -10,7 +10,7 @@
                 .horizontal-divider
 
     - if activity.steps.any?
-      - activity.steps.each_with_index do |step, i|
+      - activity.ordered_steps.each_with_index do |step, i|
         = render 'step', step: step, count: i
         .row
           .span12
