--- a/spec/javascripts/fixtures/profile.html.haml
+++ b/spec/javascripts/fixtures/profile.html.haml
@@ -1,3 +1,8 @@
+.user-profile-bio
+  %span{ data: {attribute: 'profile-name' }} user name
+  %span{ data: {attribute: 'profile-location' }} user location
+  %span{ data: {attribute: 'profile-website' }} user website
+  %span{ data: {attribute: 'profile-quote' }} user quote
 .edit-user-profile
   %input{name: 'name', value: 'test name'}
   %input{name: 'location', value: 'san francisco'}
