make 'Forum' link have active style

--- a/app/assets/stylesheets/forum_nav.css.sass
+++ b/app/assets/stylesheets/forum_nav.css.sass
@@ -40,13 +40,14 @@
     padding: 10px 30px
     text-align: center
     line-height: 19px
+    font-family: Georgia, "Times New Roman", Times, serif
+    font-size: 20px
+    color: #777
 
     &.last
       border-right: none
 
     a
-      font-family: Georgia, "Times New Roman", Times, serif
-      font-size: 20px
       float: none
       text-decoration: none
       text-shadow: 0 1px 0 white
