--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -12,7 +12,7 @@
 - if show_forum
   %li
     %a{href: 'http://forum.chefsteps.com', target: '_top'}
-      Forums
+      Forum
       %i.icon-chevron-right.pull-right
 %li.last
   %a{href: 'http://blog.chefsteps.com', target: '_top'}
