get login redirect working

--- a/app/views/devise/registrations/create.json.erb
+++ b/app/views/devise/registrations/create.json.erb
@@ -1,1 +1,2 @@
-<%= {location: thank_you_path}.to_json.html_safe %>
+<% stored_path = last_stored_location_for(signed_in_resource) %>
+<%= {location: stored_path || thank_you_path}.to_json.html_safe %>
