hook up and style form view

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -167,6 +167,7 @@ iframe
   text-transform: uppercase
   color: $gray
   font-weight: 500
+  cursor: pointer
   &:hover
     text-decoration: none
     color: $grayDark
