--- a/app/assets/stylesheets/application/user_profiles/show.css.sass
+++ b/app/assets/stylesheets/application/user_profiles/show.css.sass
@@ -76,3 +76,23 @@
     margin-top: 15px
     +font-sans-small
 
+.edit-user-profile
+  +font-sans-small
+  color: $gray
+  display: none
+  margin-top: 15px
+  input
+    margin-top: 5px
+    width: 100%
+  li
+    margin-top: 10px
+  textarea
+    margin-top: 15px
+    width: 100%
+    height: 100px
+
+.edit-profile
+  position: absolute
+  right: 0
+  bottom: 70px
+
