add profile section in nav
still need to add slide behavior

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -151,6 +151,9 @@
     i[class^="icon-"]
       display: inline-block
 
+    .profile-info
+      display: none
+
   .brand-container
     margin-bottom: 20px !important
 
