--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -64,6 +64,8 @@
   margin-bottom: 10px
   ul.nav
     margin-top: 25px
+    padding-bottom: 10px
+    margin-bottom: 10px
   li
     margin: 0
     border-right: 1px dotted $black
@@ -84,3 +86,31 @@
   li > a:hover
     color: $brickDark
 
+  .profile-info
+    +font-sans-medium
+    text-align: right
+    color: $grayDark
+    position: absolute
+    right: 0
+    bottom: 0
+    background: $white
+    min-width: 170px
+    cursor: pointer
+
+    .text
+      min-width: 122px
+      float: left
+      padding-top: 4px
+
+    span
+      +font-sans-tiny
+      line-height: 12px
+      color: $grayMedium
+      display: block
+      font-size: 12px
+      font-weight: 200
+
+    img
+      float: right
+      width: 38px
+      height: 38px
