add icons to forms and shadow

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -3,6 +3,7 @@
 @import font-awesome
 
 @import application/fonts
+@import compass/css3/box-shadow
 @import application/sprites
 @import application/custom_mixins
 
