--- a/app/assets/stylesheets/application/user_profiles/show.css.sass
+++ b/app/assets/stylesheets/application/user_profiles/show.css.sass
@@ -83,16 +83,62 @@
   margin-top: 15px
   input
     margin-top: 5px
-    width: 100%
+    width: 98%
+    padding: 5px 5px 5px 10px
+    border: 1px $grayLight solid
+    border-radius: 5px
+    +inner-shadow(1px, 1px, 3px)
   li
     margin-top: 10px
-  textarea
+  label[for='quote']
     margin-top: 15px
+  textarea
     width: 100%
     height: 100px
+    resize: none
 
 .edit-profile
   position: absolute
   right: 0
   bottom: 70px
+
+.change-pic
+  position: relative
+  float: left
+  .change-pic-label
+    +font-sans-tiny
+    color: $white
+    text-transform: uppercase
+    text-align: center
+    position: absolute
+    bottom: 0
+    background: $brick
+    margin: 5px
+    padding: 5px
+
+#location, #website
+  padding-left: 30px
+  width: 91%
+
+label.location, label.website
+  position: relative
+  &:before
+    font-family: FontAwesome
+    color: $gray
+    font-size: 1.33em
+    position: absolute
+    display: inline-block
+
+label.website
+  &:before
+    top: 37px
+    left: 9px
+    content: '\f0ac'
+
+label.location
+  &:before
+    top: 37px
+    left: 8px
+    content: '\f041'
+
 
