use type=text and add invisible class

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -203,10 +203,6 @@ iframe
     height: 100%
     width: 100%
 
-// .fluid-width-video-wrapper
-//   iframe
-//     min-height: 200px
-
 #disqus_thread
   padding-top: 20px
 
@@ -230,4 +226,7 @@ iframe
 
 .vertical-divider
   margin: 0 5px
+
+.invisible
+  display: none
 
