--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -1,9 +1,11 @@
+@import compass/css3/transition
+
 =authentication-nav
   .global-navigation li.authentication
     +font-serif-tiny
     margin-top: 20px
     border: none
-    padding: 9px 0px
+    padding: 9px 0px 10px
     float: right
 
     a
@@ -93,6 +95,8 @@
 
   .profile-info
     +font-sans-medium
+    +transition-property(right)
+    +transition-duration(0.5s)
     text-align: right
     color: $grayDark
     position: absolute
@@ -119,3 +123,7 @@
       float: right
       width: 38px
       height: 38px
+
+    &.active
+      right: 140px
+
