I guess we need the 'j'

--- a/app/views/layouts/_app_init.html.haml
+++ b/app/views/layouts/_app_init.html.haml
@@ -1,7 +1,7 @@
 :javascript
   $(function() {
     new ChefSteps.init({
-      profile: JSON.parse('#{(user_signed_in? ? current_user.to_json : false)}'),
+      profile: JSON.parse('#{j(user_signed_in? ? current_user.to_json : false)}'),
       currentUserId: "#{user_signed_in? ? current_user.id : false}"
     })
   });
