add data-attribute-invisible for hide/show

--- a/spec/javascripts/fixtures/profile.html.haml
+++ b/spec/javascripts/fixtures/profile.html.haml
@@ -1,7 +1,7 @@
 .user-profile-bio
   %div
     %span{ data: {attribute: 'profile-name' }} user name
-  %div
+  %div{ data: {"attribute-invisible" => "profile-location"}}
     %span{ data: {attribute: 'profile-location' }}
   %div
     %span{ data: {attribute: 'profile-website' }} user website
