add tabbed legal page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -15,6 +15,7 @@
 @import application/home
 @import application/title_bar
 @import application/thank_you
+@import application/legal
 @import application/courses/show
 @import application/courses/course_breakdown
 @import application/activities/overview
