move terms_of_service into legal page

--- a/app/views/copy/legal.html.haml
+++ b/app/views/copy/legal.html.haml
@@ -6,7 +6,13 @@
 
   .tab-content
     = tab_pane 'terms', true do
-      TERMS
+      .row
+        .span12
+          %h4 Terms of Service
+      .row
+        .span12
+          :markdown
+            #{terms_of_service.to_s}
     = tab_pane 'privacy' do
       PRIVACY
     = tab_pane 'licensing' do
